refactor(web): change noscript message

--- a/src/web/app/index.html
+++ b/src/web/app/index.html
@@ -11,8 +11,8 @@
 <body>
   <noscript>
     JavaScript requerido.
-    Lo sentimos, pero el Sistema de Prácticas no funciona
-    correctamente sin JavaScript habilitado. Por favor,
+    Lo sentimos, la app no funciona
+    correctamentesin JavaScript habilitado. Por favor,
     habilítalo y recarga esta página para continuar.
   </noscript>
 
